düzenle kısmı kaldırıldı yerine prompt kopyalama geldi

--- a/AiResimUretme/Views/AiImages/About.cshtml
+++ b/AiResimUretme/Views/AiImages/About.cshtml
@@ -35,7 +35,8 @@
                             <strong>Bölüm:</strong> Bilgisayar Mühendisliği<br />
                             <strong>Okul:</strong> Yozgat Bozok Üniversitesi
                         </p>
-                        <a href="#" class="btn btn-outline-light btn-sm">
+                        <a href="https://github.com/mami411"
+                            class="btn btn-outline-light btn-sm">
                             <i class="bi bi-github"></i> GitHub Profili
                         </a>
                     </div>
